--- a/templates/contatos.html
+++ b/templates/contatos.html
@@ -5,6 +5,12 @@
     <title>Contatos</title>
 </head>
 <body>
-
+    <table border = 1>
+        {% for i in range(1, 5) %}
+        <tr>
+            <td>{{ i }}</td><td> x </td><td>{{ i }}<td> = <td>{{ i * 2 }}</td>
+        </tr>
+        {% endfor %}
+    </table>
 </body>
 </html>
